--- a/03-front-basic-github/css/main.css
+++ b/03-front-basic-github/css/main.css
@@ -212,6 +212,18 @@ header .sub-menu li a:hover {
   background-repeat: no-repeat;
   /* 배경사진이 바둑판처럼 반복되는것을 방지 */
   background-position: bottom left;
+  /* 이미지 빈공간까지 다 자연스럽게 커버해줌 */
+  background-size: cover;
+}
+
+.section--visual::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .section--visual .inner{
@@ -279,4 +291,167 @@ header .sub-menu li a:hover {
   padding: 0 25px;
   font-size: 18px;
   justify-content: center;
+}
+
+/* FEATURE */
+.section--feature{
+  background: #f5f5f5;
+  padding-top: 66px;
+}
+
+.section--feature .summary{
+  /* 크기반응형 하기위해선 width 안좋음 */
+  max-width: 820px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section--feature .video{
+  max-width: 650px;
+  margin: 50px auto;
+}
+
+.section--feature .video .video-ratio{
+  height: 0;
+  /* youtube가 16:9이기 때문에 56.25로 높이 비율이 맞음
+  패딩 탑이 사실상 height */
+  padding-top: 56.25%;
+  position: relative;
+
+}
+
+.section--feature .video .video-ratio iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+}
+
+/* FEATURE 의 tiles */
+.section--feature .tiles{
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+  
+}
+
+.section--feature .tiles .inner{
+  max-width: 1200px;
+  /* float 감싸고 있는 부모태그가 있더라도 붕떠서 벗어나는 특성있음
+  clearfix로 그 특성을 없앰 */
+
+}
+
+/* FEATURE 의 tiles - float */
+/* FEATURE 의 tiles 두가지 방식 - 첫번째 grid방식 - 현대적 */
+/* .section--feature .tiles ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+
+}
+
+.section--feature .tiles li{
+  padding: 34px 24px;
+  text-align: center;
+  line-height: 2.5;
+  border-right: 1px solid #e5e5e5;
+  box-sizing: border-box;
+} */
+
+/* FEATURE 의 tiles 두가지 방식 - 첫번째 float방식 - 과거 */
+.section--feature .tiles ul{
+  
+}
+
+.section--feature .tiles li{
+  max-width: 25%;
+  padding: 34px 24px;
+  /* float 배치를 왼쪽에서 부터 차곡차곡 넣을 때 사용 */
+  float: left;
+  text-align: center;
+  line-height: 1.5;
+  border-right: 1px solid #e5e5e5;
+  /* border-box 크기가 고정이 안되고 커져서 레이아웃 변화가 일어날때
+  고정이되면서 100%가 값이 정립됨 */
+  box-sizing: border-box;
+}
+
+.section--feature .tiles li:last-child{
+/* last-child = 마지막 요소 선택 */
+  border-right: none;
+}
+
+.section--feature .tiles li img{
+  max-width: 100%;
+  padding: 14px 10% 24px;/* 상 좌,우 하 */
+  box-sizing: border-box;
+
+}
+
+.section--feature .tiles li h3{
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+
+}
+
+.section--feature .tiles li p{
+  font-size: 14px;
+  color: #767676;
+}
+
+/* WHERE IS GITHUB */
+.section--where-is .inner{
+  padding-top: 80px;
+  padding-bottom: 80px;
+  
+}
+
+#map{
+  width: 100%;
+  height: 500px;
+  margin-top: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+}
+
+/* PRICING CARD */
+.section--pricing{
+  background: linear-gradient(#f5f5f5, #fff);
+
+}
+
+.section--pricing .inner{
+  padding: 80px 0;
+}
+
+.section--pricing .card {
+  display: flex;
+  border: 1px solid #e5e5e5;
+  border-radius:6px ;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.section--pricing .card .cell{
+  display: flex;
+  /* 가로세로 텍스트를 센터로 */
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+}
+
+.section--pricing .card .cell1 .btn{
+  height: 50px;
+  font-size: 16px;
+}
+
+.section--pricing .card .cell2{
+  border-left: 1px solid #e5e5e5;
+  /* 보여지는 비율을 1로 보겠다 */
+  flex: 1;
+  line-height: 1.5;
+  font-size: 22px;
+  font-weight: 300;
 }
