--- a/github project/01-front-basic-github/css/main.css
+++ b/github project/01-front-basic-github/css/main.css
@@ -1,5 +1,12 @@
-body {font-family: 'Roboto Mono', monospace;
-    font-size: 40px;
+a{
+    text-decoration: none;
+}
+
+.body__container {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
 }
 
 /* BUTTON */
@@ -22,10 +29,11 @@ body {font-family: 'Roboto Mono', monospace;
   }
   
   .btn:hover::before{
+    /* 가상요소?? before after 매우 많이 씀 신기함 */
     content:"";
-  /*content 재미난 기능이 많음 무조건 넣어야됨*/
-    position:absolute;
-  /*얘도 중요함 부모한테는 relatie 있어야 absolute 쓸수있음 기준으로 이동을 함    */
+    /*content 재미난 기능이 많음 무조건 넣어야됨*/
+    position:absolute;  
+    /*얘도 중요함 부모한테는 relatie 있어야 absolute 쓸수있음 기준으로 이동을 함    */
     top:0;
     left:0;
     width:100%;
@@ -72,3 +80,67 @@ body {font-family: 'Roboto Mono', monospace;
   .input--text::-webkit-input-placeholder{color:#cacaca;}
   .input--text::-ms-input-placeholder{color:#cacaca;}
   .input--text::-moz-input-placeholder{color:#cacaca;}
+
+/* HEADER */
+
+header{
+    border-bottom: 1px solid rgba(0,0,0,.75);
+    box-shadow:0 0 5px rgba(0,0,0,.75);
+    background: #fff;
+
+}
+
+header .inner{
+    max-width: 980px;
+    height: 78px;
+    margin:0 auto;
+/* margin을 자주 씀 여백 컨트롤 할 때 */
+}
+
+header .menu-group{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+header .logo{
+    margin-right: 10px;
+
+
+}
+
+header .logo a{
+    background: url(../img/logo.svg);
+    /* .. 두 번 쓰면 외부로 나갈수 있는 경로를 탄다 */
+    width: 32px;
+    height: 32px;
+    display: block;
+    /* a태그는 inline 속성 = 크기를 지정못함 */
+    text-indent: -9999px;
+    /* github라는 문구 대체 텍스트 alt 대신하기위해 왼쪽으로 이동*/
+    /* -9999가 개발자들끼리 대체 텍스트구나 하면서 이해함 */
+    
+}
+
+header .logo a:hover{
+    background: url(../img/logo_on.svg);
+
+}
+
+header .main-menu{
+    display: flex;
+
+}
+
+header .main-menu li a{
+    /* 그냥 li로하면 적용이 안된다 */
+    padding: 15px;
+    color: #3c4146;
+    display: block;
+
+}
+
+header .main-menu li a:hover{
+    color: #55a532;
+
+}
